<resources>
    <string name="app_name">Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="dashboard">Dashboard chuchu</string>
    <string name="user">User</string>
    <string name="email">Email</string>
</resources>